--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@react-three/drei": "^10.7.5",
+    "@react-three/fiber": "^9.3.0",
     "@svgdotjs/svg.js": "^3.2.4",
     "animejs": "^3.2.2",
     "coolshapes-react": "^1.0.1",
