--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "socket.io-client": "^4.8.1",
     "three": "^0.174.0",
     "vivus": "^0.4.6"
   },
